--- a/pptElemGetter/pptElemGetter.cbp
+++ b/pptElemGetter/pptElemGetter.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-static" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/pptElemGetter" prefix_auto="1" extension_auto="1" />
