installed boost//program_options

--- a/pptElemGetter/pptElemGetter.cbp
+++ b/pptElemGetter/pptElemGetter.cbp
@@ -31,7 +31,11 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add directory="../../boost_1_86_0" />
 		</Compiler>
+		<Linker>
+			<Add library="../../boost_1_86_0/stage/lib/libboost_program_options-mgw8-mt-x64-1_86.a" />
+		</Linker>
 		<Unit filename="main.cpp" />
 		<Unit filename="pptElements.cpp" />
 		<Unit filename="pptElements.h" />
