added support russian in filename and added help page output when running without arguments

--- a/pptElemGetter/pptElemGetter.cbp
+++ b/pptElemGetter/pptElemGetter.cbp
@@ -34,6 +34,8 @@
 			<Add directory="../../boost_1_86_0" />
 		</Compiler>
 		<Linker>
+			<Add option="-static" />
+			<Add option="-municode" />
 			<Add library="../../boost_1_86_0/stage/lib/libboost_program_options-mgw8-mt-x64-1_86.a" />
 		</Linker>
 		<Unit filename="main.cpp" />
